@@ -64,7 +64,87 @@ name|codec
 operator|.
 name|language
 operator|.
-name|*
+name|Caverphone2
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|codec
+operator|.
+name|language
+operator|.
+name|DoubleMetaphone
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|codec
+operator|.
+name|language
+operator|.
+name|Metaphone
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|codec
+operator|.
+name|language
+operator|.
+name|Nysiis
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|codec
+operator|.
+name|language
+operator|.
+name|RefinedSoundex
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|codec
+operator|.
+name|language
+operator|.
+name|Soundex
 import|;
 end_import
 
@@ -437,6 +517,62 @@ block|,
 literal|"TTA1111111"
 block|,
 literal|"KLN1111111"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAlgorithm
+argument_list|(
+operator|new
+name|Nysiis
+argument_list|()
+argument_list|,
+literal|true
+argument_list|,
+literal|"aaa bbb ccc easgasg"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"A"
+block|,
+literal|"aaa"
+block|,
+literal|"B"
+block|,
+literal|"bbb"
+block|,
+literal|"C"
+block|,
+literal|"ccc"
+block|,
+literal|"EASGAS"
+block|,
+literal|"easgasg"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAlgorithm
+argument_list|(
+operator|new
+name|Nysiis
+argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+literal|"aaa bbb ccc easgasg"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"A"
+block|,
+literal|"B"
+block|,
+literal|"C"
+block|,
+literal|"EASGAS"
 block|}
 argument_list|)
 expr_stmt|;
