@@ -32,16 +32,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|StringReader
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|HashMap
@@ -70,7 +60,7 @@ name|codec
 operator|.
 name|language
 operator|.
-name|Metaphone
+name|Caverphone2
 import|;
 end_import
 
@@ -86,7 +76,7 @@ name|codec
 operator|.
 name|language
 operator|.
-name|Caverphone2
+name|Metaphone
 import|;
 end_import
 
@@ -101,20 +91,6 @@ operator|.
 name|analysis
 operator|.
 name|BaseTokenStreamTestCase
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|MockTokenizer
 import|;
 end_import
 
@@ -1154,6 +1130,58 @@ block|,
 literal|"67"
 block|,
 literal|"862"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAlgorithm
+argument_list|(
+literal|"Nysiis"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"Macintosh Knuth Bart Hurd"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"MCANT"
+block|,
+literal|"Macintosh"
+block|,
+literal|"NAT"
+block|,
+literal|"Knuth"
+block|,
+literal|"BAD"
+block|,
+literal|"Bart"
+block|,
+literal|"HAD"
+block|,
+literal|"Hurd"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAlgorithm
+argument_list|(
+literal|"Nysiis"
+argument_list|,
+literal|"false"
+argument_list|,
+literal|"Macintosh Knuth Bart Hurd"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"MCANT"
+block|,
+literal|"NAT"
+block|,
+literal|"BAD"
+block|,
+literal|"HAD"
 block|}
 argument_list|)
 expr_stmt|;
